src/objects/Alsur_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Association__c</fullName>
        <label>Association</label>
        <referenceTo>Association__c</referenceTo>
        <relationshipLabel>Alsur Farmers</relationshipLabel>
        <relationshipName>Alsur_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Farmer_Code__c</fullName>
        <label>Farmer Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Alsur Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Farmer_Code__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Association__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Alsur Farmer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alsur Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>